welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:-4: error: Unmatched closing brace '}' ignored here
	}
        ^Program:-3: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Program:1: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^