welcome.lessons.welcome.loopfor.LoopFor.scala.code


while(estSurBiscuit==false){
	avance();
	prendBiscuit();
	if(estDosMur==false){
	
	recule();
	}
	poseBiscuit();
}
}


